# Me-Nexus

./: README.md  package-lock.json  package.json  test-plugins.html
docs/: localdb_Syncsystem.md  plugin_sidecar.md  tauri-file-system.md
plugins/test-plugin/: README.md  index.ts  plugin.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecars/: plugin_manager  plugin_manager.bat  plugin_manager.ts
src-tauri/src/: database.rs  error.rs  lib.rs  lib_new.rs  lib_old.rs  main.rs  models.rs  sidecar.rs  sync_service.rs
src/lib/components/: PermissionControls.svelte  SettingsModal.svelte  VaultSetup.svelte
src/routes/: +page.svelte
