[package]
name = "me-nexus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "me_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# Database and synchronization dependencies
rusqlite = { version = "0.29", features = ["bundled"] }
tokio-rusqlite = "0.4.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"

# Logging and error handling
log = "0.4"
env_logger = "0.11.3"
thiserror = "1.0"

# Plugin installation
zip = "0.6"

